[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
app_rs = { path = "../rs/", features = ["deno_op"] }

[dependencies]
app_rs = { path = "../rs/", features = ["deno_op"] }
deno_ast = { version = "0.24.0", features = ["transpiling"] }
deno_core = { version = "0.171.0" }
reqwest = "0.11.14"
tokio = { version = "1.25.0", features = ["full"] }
